Add images and apply coroutine in Splash screen

--- a/app/src/main/res/layouts/splash/layout/activity_splash.xml
+++ b/app/src/main/res/layouts/splash/layout/activity_splash.xml
@@ -17,12 +17,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
         <ImageView
+            android:id="@+id/imageview_splash_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round"
+            android:src="@drawable/cartrack_square_transparent_background"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
