--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,44 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+
+<!--    <item name="android:windowContentTransitions">true</item>-->
+
+<!--    &lt;!&ndash; enable window content transitions &ndash;&gt;-->
+<!--    <item name="android:windowActivityTransitions">true</item>-->
+
+<!--    &lt;!&ndash; specify enter and exit transitions &ndash;&gt;-->
+<!--    <item name="android:windowEnterTransition">@android:transition/fade</item>-->
+<!--    <item name="android:windowExitTransition">@android:transition/fade</item>-->
+
+<!--    &lt;!&ndash; specify shared element transitions &ndash;&gt;-->
+<!--    <item name="android:windowSharedElementEnterTransition">@android:transition/slide_bottom</item>-->
+<!--    <item name="android:windowSharedElementExitTransition">@android:transition/slide_top</item>-->
+  </style>
+
+  <style name="AppTheme.NoActionBar" parent="AppTheme">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+  </style>
+
+  <style name="Theme.AppCompat.Translucent" parent="AppTheme.NoActionBar">
+    <item name="android:background">#54000000</item> <!-- Or any transparency or color you need -->
+    <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:colorBackgroundCacheHint">@null</item>
+    <item name="android:windowIsTranslucent">true</item>
+    <item name="android:windowAnimationStyle">@android:style/Animation</item>
+  </style>
+
+
+
+
+  <style name="EditText.Login" parent="Widget.AppCompat.EditText">
+    <item name="android:textColor">@color/colorAccent</item>
+    <item name="android:textColorSecondary">@color/colorAccent</item>
+    <item name="android:textColorHint">@color/colorAccent</item>
+    <item name="colorAccent">@color/colorAccent</item>
+    <item name="colorControlNormal">@color/colorPrimary</item>
+    <item name="colorControlActivated">@color/colorPrimaryDark</item>
   </style>
 
 </resources>
