--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,16 @@
     <item name="colorControlActivated">@color/colorPrimaryDark</item>
   </style>
 
+
+
+  <style name="Button.Primary" parent="@style/Widget.AppCompat.Button.Colored">
+    <item name="colorButtonNormal">@color/colorPrimary</item>
+    <item name="android:textColor">@android:color/white</item>
+  </style>
+
+  <style name="Yellow.Small.AppCompatRatingBar" parent="Base.Widget.AppCompat.RatingBar.Small">
+    <item name="colorControlNormal">@color/grey_60</item>
+    <item name="colorControlActivated">@color/yellow_600</item>
+  </style>
+
 </resources>
