Implement API in login and display proper messages

--- a/app/src/main/res/layouts/signin/layout/activity_signin.xml
+++ b/app/src/main/res/layouts/signin/layout/activity_signin.xml
@@ -101,6 +101,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/fontColorWhite"
                 android:inputType="text"
+                android:gravity="center"
                 android:padding="8dp"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -125,6 +126,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/fontColorWhite"
                 android:inputType="textPassword"
+                android:gravity="center"
                 android:padding="8dp"/>
 
         </com.google.android.material.textfield.TextInputLayout>
