--- a/app/src/main/res/layouts/maps/layout/bottomsheet_maps_user.xml
+++ b/app/src/main/res/layouts/maps/layout/bottomsheet_maps_user.xml
@@ -8,7 +8,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottom_sheet"
+    android:id="@+id/linearlayout_maps_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
@@ -37,6 +37,7 @@
                 android:background="@drawable/ic_baseline_arrow_drop_up_24" />
 
             <TextView
+                android:id="@+id/textview_maps_bottomsheet_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_xxlarge"
@@ -47,8 +48,18 @@
                 android:paddingLeft="@dimen/spacing_large"
                 android:paddingRight="@dimen/spacing_large"
                 android:paddingStart="@dimen/spacing_large"
-                android:text="Dandelion Chocolate"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+
+            <TextView
+                android:id="@+id/textview_maps_bottomsheet_sub_details"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_marginLeft="@dimen/spacing_xxlarge"
+                android:layout_marginStart="@dimen/spacing_xxlarge"
+                android:gravity="center_vertical"
+                android:text=""
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,32 +67,6 @@
                 android:orientation="vertical"
                 android:padding="@dimen/spacing_large">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/spacing_middle"
-                    android:layout_marginLeft="@dimen/spacing_xxlarge"
-                    android:layout_marginStart="@dimen/spacing_xxlarge"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatRatingBar
-                        style="@style/Yellow.Small.AppCompatRatingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:numStars="5"
-                        android:rating="3.5"
-                        android:stepSize="0.5"
-                        android:theme="@style/Yellow.Small.AppCompatRatingBar" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="4.7 (51)"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                </LinearLayout>
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -89,114 +74,15 @@
                     android:layout_marginStart="@dimen/spacing_xxlarge"
                     android:background="@color/grey_10" />
 
-                <TextView
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_maps_bottomsheet_users"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginLeft="@dimen/spacing_xxlarge"
-                    android:layout_marginStart="@dimen/spacing_xxlarge"
-                    android:gravity="center_vertical"
-                    android:text="12 min away"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/colorPrimary" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="@dimen/spacing_xxlarge"
-                    android:layout_marginStart="@dimen/spacing_xxlarge"
-                    android:background="@color/grey_10" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_middle"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="740 Valencia St, San Francisco, CA"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="(415) 349-0942"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@mipmap/ic_launcher" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="Wed, 10 AM - 9 PM"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                    android:layout_height="200dp"
+                    android:layout_marginTop="@dimen/spacing_middle" />
 
             </LinearLayout>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
